CONTRAST-15036 passed user as parameter to pay template, fixed utils.py method

--- a/static/app/css/users/pay/index.css
+++ b/static/app/css/users/pay/index.css
@@ -19,3 +19,7 @@
 #payIndex #hint {
     color: #AA6F93;
 }
+
+#payIndex #pageTitle {
+    margin-bottom: 15px;
+}
